# BIU_LLM_Project

./: .gitignore  Dockerfile  README.md  extract-old1.ipynb  extract-old2.ipynb  extract.ipynb  extract02.ipynb  extract_lior01.ipynb  extract_to_json.ipynb  lior_test.txt  pyproject.toml  upload_file.ipynb  upload_file.py  upload_folders.ipynb  upload_folders.py  upload_local_folders.ipynb  vector_builder.ipynb
.gradio/flagged/: dataset1.csv
app/: __init__.py  document_store.py  generator.py  retriever.py  routes.py
config/: config-demo.yaml  config_helper.py
data/documents/: AWS Practitioner Sylabus.json  Advanced Project Management.json  CDO-CDAIO Sylabus.json  CND Sylabus.json  Untitled.ipynb  WS Certified Solutions Architect Associate.json  demodoc.txt
data/documents/Bak2/: AWS Solution Architect Sylabus.json  Advanced Project Management Sylabus.json  CCNA Sylabus.json  CDAIO-CDO Sylabus.json  CND Sylabus.json  DMP Sylabus.json  DS & AI for Managers Sylabus.json  Data Science Sylabus.json  Product Management Sylabus.json
data/documents/eng/: AWS Practitioner Sylabus.json  AWS Solution Architect Sylabus.json  Advanced Project Management Sylabus.json  BI Fin Ops Sylabus.json  CC Sylabus.json  CCNA Sylabus.json  CCSP Sylabus.json  CDAIO-CDO Intro.json  CDAIO-CDO Sylabus.json  CISCO CCNA Sylabus.json  CISO Sylabus.json  CISSP Sylabus.json  CND Sylabus.json  Check Point CCSA Sylabus.json  DMP Sylabus.json  DPO Sylabus.json  DS & AI for Managers Sylabus.json  Data Science Sylabus.json  DevSecOps Sylabus.json  FinOps Sylabus.json  Fortinet NSE Sylabus.json  Product Management Sylabus.json  QA Sylabus.json
data/documents/mixed/: AWS Solution Architect Sylabus.json  CC Sylabus.json  (+15 more)
output/json/: AWS Practitioner Sylabus.json  AWS Solution Architect Sylabus.json  Advanced Project Management Sylabus.json  BI Fin Ops Sylabus.json  CC Sylabus.json  CCNA Sylabus.json  CCSP Sylabus.json  CDAIO-CDO Intro.json  CDAIO-CDO Sylabus.json  CISCO CCNA Sylabus.json  CISO Sylabus.json  CISSP Sylabus.json  CND Sylabus.json  Check Point CCSA Sylabus.json  DMP Sylabus.json  DPO Sylabus.json  DS & AI for Managers Sylabus.json  Data Science Sylabus.json  DevSecOps Sylabus.json  FinOps Sylabus.json  Fortinet NSE Sylabus.json  Product Management Sylabus.json  QA Sylabus.json
src/: __init__.py  document_store.py  generator.py  gradio_chat.py  retriever.py  routes.py  vector_builder.py
web/static/: chat.js  gradio_styles.css
web/templates/: chat.html  index.html
(+42 files in other folders)
