[tool.poetry]
name = "biu-llm-project"
version = "0.1.0"
description = ""
authors = ["IgorDiamandi <161752477+IgorDiamandi@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
openai = "^1.53.0"
datetime = "^5.5"
pydantic = "^2.9.2"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
