[tool.poetry]
name = "biu-llm-project"
version = "0.1.0"
description = ""
authors = ["IgorDiamandi <161752477+IgorDiamandi@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
openai = "^1.53.0"
datetime = "^5.5"
pydantic = "^2.9.2"
flask = "^3.0.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
faiss-cpu = "^1.9.0"
transformers = "^4.46.2"
sentence-transformers = "^3.2.1"
python-dotenv = "^1.0.1"
blinker = "^1.8.2"
charset-normalizer = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
